added a fileReader directive, basic skeleton of controller

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 
     <!-- Add your site or application content here -->
     <div class="header">
-      <div class="navbar navbar-default" role="navigation">
+      <div class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
         <div class="container">
           <div class="navbar-header">
 
@@ -88,6 +88,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/directives/filereader.js"></script>
         <!-- endbuild -->
 </body>
 </html>
