--- a/app/index.html
+++ b/app/index.html
@@ -23,35 +23,36 @@
     <![endif]-->
     <!-- Add your site or application content here -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#/">angGeocoder</a>
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#/">angGeocoder</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li ng-class="{'active' : currentStep == 1}"><a href="#/">Home</a></li>
+                    <li ng-class="{'active' : currentStep == 2}"><a href="#/details">Details</a></li>
+                    <li ng-class="{'active' : currentStep == 3}"><a href="#/about">About</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li ng-class="{'active' : currentStep == 1}"><a href="#/">Home</a></li>
-            <li ng-class="{'active' : currentStep == 2}"><a href="#/details">Details</a></li>
-            <li ng-class="{'active' : currentStep == 3}"><a href="#/about">About</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
     </nav>
-
-    
-    <div class="container-fluid">
+    <div class="container">
         <div ng-view=""></div>
     </div>
-    <div class="footer">
-        <div class="container-fluid">
-            <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted text-center">
+                <span class="glyphicon glyphicon-heart"></span> <a href="https://amrithyerramilli.github.io">Amrith Yerramilli</a>
+            </p>
         </div>
-    </div>
+    </footer>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
     ! function(A, n, g, u, l, a, r) {
@@ -79,7 +80,7 @@
     <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
     <!-- endbower -->
-    <!-- endbuild -->    
+    <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
